Add tests for Context

--- a/test/resources/index.liquid
+++ b/test/resources/index.liquid
@@ -1,5 +1,8 @@
-<ul>
-  {% for user in users %}
-    <li>Hello {{user.name}} from {{user.birth_place}}.</li>
-  {% endfor %}
-</ul>
+<html>
+<body>
+  <form method="POST">
+    <input type="text" name="name" placeholder="name"/>
+    <button>Submit</button>
+  </form>
+  </body>
+</html>
