--- a/debug/templates/index.liquid
+++ b/debug/templates/index.liquid
@@ -1,4 +1,4 @@
-{%- include 'header', title: 'Bemol' -%}
+{%- include 'partials/header', title: 'Bemol' -%}
 
 <form enctype="multipart/form-data" method="POST">
     <input type="text" name="foo" placeholder="foo" />
@@ -13,4 +13,4 @@
     </code>
 {%- endif -%}
 
-{%- include 'footer' -%}
+{%- include 'partials/footer' -%}
